sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: '(' expected but identifier found.
    while echange ((i:Int,i+1:Int)!=echange(i+1:Int,i:Int)){
          ^AlgBubbleSort1:13: error: illegal start of simple expression
} 
^